--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,6 +115,9 @@ section.home {
       h1 {
         margin-top: 10vh;
       }
+      #about-text {
+        margin-top: 1rem;
+      }
     }
     #youtube-vid {
       margin: 0 auto;
